@@ -396,8 +396,13 @@ fileio_init(PyObject *oself, PyObject *args, PyObject *kwds)
            end of file (otherwise, it might be done only on the
            first write()). */
         PyObject *pos = portable_lseek(self->fd, NULL, 2);
-        if (pos == NULL)
+        if (pos == NULL) {
+            if (closefd) {
+                close(self->fd);
+                self->fd = -1;
+            }
             goto error;
+        }
         Py_DECREF(pos);
     }
 
